// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card component snapshots > renders basic card correctly 1`] = `
<div>
  <div
    class="card p-4 bg-white shadow-md rounded-md"
  >
    <h3
      class="text-lg font-semibold"
    >
      Test Card
    </h3>
    <p
      class="mt-2 text-gray-600"
    >
      This is test content for snapshot
    </p>
  </div>
</div>
`;

exports[`Card component snapshots > renders card with footer correctly 1`] = `
<div>
  <div
    class="card p-4 bg-white shadow-md rounded-md"
  >
    <h3
      class="text-lg font-semibold"
    >
      Card with Footer
    </h3>
    <p
      class="mt-2 text-gray-600"
    >
      This card has a footer section
    </p>
    <div
      class="mt-4 pt-2 border-t text-sm text-gray-500"
    >
      Footer text goes here
    </div>
  </div>
</div>
`;
